--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -22,6 +22,18 @@
 }
 
 .skill {
-  background: green;
+  text-align: center;
+  background: white;
+  line-height: 1.4rem;
   padding: 2rem;
+  transition: all 0.2s;
+
+  h4 {
+    margin: 1rem 0;
+  }
+
+  &:hover {
+    transform: translateY(-4px);
+    box-shadow: var(--box-shadow);
+  }
 }
