--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -30,10 +30,21 @@
 
   h4 {
     margin: 1rem 0;
+    text-transform: uppercase;
+    font-size: 1.2rem;
+    font-weight: 300;
   }
 
   &:hover {
     transform: translateY(-4px);
     box-shadow: var(--box-shadow);
+  }
+  img {
+    width: 4rem;
+    transition: all 0.9s;
+  }
+
+  &:hover img {
+    transform: scale(1.3);
   }
 }
