--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -14,4 +14,13 @@
     height: 8rem;
     border-radius: 50%;
   }
+  p {
+    line-height: 1.4rem;
+    font-weight: 200;
+    color: rgba(255, 255, 255, 0.65);
+  }
+
+  &__important {
+    color: var(--tertiary-color);
+  }
 }
