--- a/sass/main.css
+++ b/sass/main.css
@@ -320,4 +320,20 @@ html {
   height: 8rem;
   border-radius: 50%;
 }
+
+.about p {
+  line-height: 1.4rem;
+  font-weight: 200;
+  color: rgba(255, 255, 255, 0.65);
+}
+
+.about__important {
+  color: var(--tertiary-color);
+}
+
+.projects-section {
+  padding: 2rem;
+  background: -webkit-gradient(linear, left bottom, right top, from(var(--primary-color, var(--secondary-color))));
+  background: linear-gradient(to right top, var(--primary-color, var(--secondary-color)));
+}
 /*# sourceMappingURL=main.css.map */
