projects section almost finishes

--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -1,7 +1,128 @@
 .projects-section {
-  padding: 2rem;
+  padding: 4rem;
   background: linear-gradient(
-    to right top,
-    var(--primary-color, var(--secondary-color))
+    to right,
+    var(--primary-color),
+    var(--secondary-color)
   );
+}
+
+.projects {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(24rem, 1fr));
+}
+
+.project {
+  position: relative;
+  transition: all 1.4s;
+  height: 18rem;
+  background: white;
+  z-index: 1000;
+  background-image: url("../imgs/mypicture.jpg");
+  background-position: center;
+  background-size: cover;
+
+  &:hover {
+    background: rgba(0, 0, 0, 0.75);
+    background-position: center;
+    background-size: cover;
+  }
+  &:hover &__btns {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  &__btns {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.4s;
+  }
+  &__website,
+  &__github {
+    width: max-content;
+    padding: 0.5rem 1rem;
+    border: none;
+    outline: none;
+    font-size: 1rem;
+    margin: 0.4rem 0;
+    cursor: pointer;
+    color: white;
+    transition: all 0.5s;
+  }
+  &__website {
+    transform: translateY(-4rem);
+    background: var(--primary-color);
+
+    i {
+      color: black;
+      margin-right: 0.5rem;
+      display: inline-block;
+      transition: all 0.3s;
+    }
+    &:hover {
+      background: red;
+      color: black;
+    }
+    &:hover i {
+      transform: scale(1.2);
+      color: white;
+    }
+  }
+  &__github {
+    transform: translateY(4rem);
+    background: var(--secondary-color);
+    display: block;
+
+    i {
+      color: black;
+      margin-right: 0.5rem;
+      display: inline-block;
+      transition: all 0.3s;
+    }
+
+    &:hover {
+      background: blueviolet;
+      color: black;
+    }
+    &:hover i {
+      transform: scale(1.2);
+      color: white;
+    }
+  }
+
+  &__techs {
+    position: absolute;
+    bottom: 3rem;
+    left: 50%;
+    transform: translate(-50%);
+    font-weight: 500;
+    background: linear-gradient(
+      to right,
+      var(--primary-color),
+      var(--secondary-color)
+    );
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+    opacity: 0;
+    visibility: hidden;
+    transform: translateX(-8rem);
+    transition: all 1.2s;
+  }
+
+  &:hover &__github,
+  &:hover &__website {
+    transform: translateY(0);
+  }
+
+  &:hover &__techs {
+    opacity: 1;
+    visibility: visible;
+    transform: translateX(-50%);
+  }
 }
