--- a/sass/main.css
+++ b/sass/main.css
@@ -52,7 +52,7 @@ html {
       align-self: stretch;
 }
 
-.nav__list-item {
+.nav__list-item:not(:last-child) {
   margin: 0 0.4rem;
   text-transform: uppercase;
   font-weight: 400;
@@ -68,11 +68,11 @@ html {
   font-size: 0.9rem;
 }
 
-.nav__list-item:hover {
+.nav__list-item:not(:last-child):hover {
   color: peru;
 }
 
-.nav__list-item::before {
+.nav__list-item:not(:last-child)::before {
   content: "";
   display: inline-block;
   background: var(--primary-color);
@@ -92,6 +92,30 @@ html {
   opacity: 1;
   -webkit-transform: translateX(0);
           transform: translateX(0);
+}
+
+.nav__list-btn {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  border: 2px solid white;
+  color: var(--primary-color);
+  border-radius: 4rem;
+  padding: 0.4rem 1.5rem;
+  outline: none;
+  background: var(--primary-color);
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  color: white;
+  cursor: pointer;
+  margin: 0 0.4rem;
+}
+
+.nav__list-btn:hover {
+  background: none;
+  color: var(--primary-color);
 }
 
 .home {
@@ -481,5 +505,58 @@ html {
   visibility: visible;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
+}
+
+.form-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0.3)), to(rgba(255, 255, 255, 0.3))), url(https://images.unsplash.com/photo-1528721071427-cab7de8e8050?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8bW91dGFpbnN8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60);
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)), url(https://images.unsplash.com/photo-1528721071427-cab7de8e8050?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8bW91dGFpbnN8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60);
+  min-height: 100vh;
+  background-size: cover;
+  background-position: center;
+}
+
+.form {
+  width: 60%;
+}
+
+.form__person-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.form__input {
+  padding: 0.8rem 1rem;
+  border: none;
+  outline: none;
+  width: 49%;
+}
+
+.form__message {
+  width: 100%;
+  margin-top: 1rem;
+  outline: none;
+  border: none;
+  padding: 0.8rem 1rem;
+}
+
+.form__btn {
+  width: 100%;
 }
 /*# sourceMappingURL=main.css.map */
