--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -15,3 +15,14 @@ html {
   padding: 0;
   box-sizing: border-box;
 }
+@media (max-width: 600px) {
+  html {
+    font-size: 85%;
+  }
+}
+
+@media (max-width: 500px) {
+  html {
+    font-size: 75%;
+  }
+}
