--- a/sass/_form.scss
+++ b/sass/_form.scss
@@ -1,4 +1,5 @@
 .form-section {
+  padding: 0.9rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -36,6 +37,13 @@
     padding: 0.8rem 1rem;
   }
   &__btn {
+    width: 100%;
+  }
+
+  @media (max-width: 1000px) {
+    width: 80%;
+  }
+  @media (max-width: 600px) {
     width: 100%;
   }
 }
