--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -1,19 +1,28 @@
 .nav {
   background: black;
   color: white;
-  padding: 0 2rem;
+  padding: 0.8rem 2rem;
+
+  &__logo {
+    z-index: 1000;
+  }
   &__lists {
     height: 4rem;
     list-style: none;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    transition: all 0.4s;
   }
   &__list-items {
     flex: 1;
     display: flex;
     justify-content: flex-end;
     align-self: stretch;
+
+    @media (max-width: 600px) {
+      display: none;
+    }
   }
   &__list-item:not(:last-child) {
     margin: 0 0.4rem;
@@ -68,4 +77,101 @@
       color: var(--primary-color);
     }
   }
+}
+
+.hamburger {
+  height: 100%;
+  border: 2px solid peru;
+  display: flex;
+  align-items: center;
+  padding: 0 1rem;
+  cursor: pointer;
+  z-index: 1000;
+
+  &__icon {
+    width: 3.5rem;
+    background: white;
+    height: 3px;
+    display: inline-block;
+    position: relative;
+
+    &::before {
+      content: "";
+      width: 100%;
+      height: 100%;
+      background: white;
+      position: absolute;
+      top: 0;
+      left: 0;
+      transform: translateY(8px);
+      display: inline-block;
+    }
+    &::after {
+      content: "";
+      width: 100%;
+      height: 100%;
+      background: white;
+      position: absolute;
+      top: 0;
+      left: 0;
+      transform: translateY(-8px);
+      display: inline-block;
+    }
+  }
+}
+
+.nav__items-mobile {
+  position: absolute;
+  width: 100%;
+  height: 0;
+  transition: all 0.8s;
+  background: black;
+  right: 0;
+  top: 5.6rem;
+  opacity: 0;
+  visibility: hidden;
+}
+.show-nav-items {
+  height: 25rem;
+  opacity: 1;
+  visibility: visible;
+}
+
+@media (max-width: 600px) {
+  .mobile-nav__list-items {
+    height: 100%;
+    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    list-style: none;
+    transition: all 0.8s;
+    transform: translateY(-200rem);
+  }
+  .nav__list-item {
+    margin: 1rem 1rem !important;
+    padding: 1rem !important;
+    &:hover {
+      background: var(--primary-color);
+      color: white !important;
+    }
+    &:hover::before {
+      display: none;
+    }
+  }
+  .nav__list-btn {
+    align-self: flex-start;
+    border-radius: 0;
+    padding: 0;
+    margin: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 4rem;
+    width: 8rem;
+  }
+}
+
+.mobile-nav__items-show {
+  transform: translateY(0);
 }
