--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -5,11 +5,19 @@
     var(--primary-color),
     var(--secondary-color)
   );
+
+  @media (max-width: 600px) {
+    padding: 2rem 0.9rem;
+  }
 }
 
 .projects {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(24rem, 1fr));
+
+  @media (max-width: 600px) {
+    grid-template-columns: repeat(auto-fill, minmax(19rem, 1fr));
+  }
 }
 
 .project {
