--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -1,6 +1,10 @@
 .skills-section {
   padding: 4rem;
   background: black;
+
+  @media (max-width: 600px) {
+    padding: 2rem 0.9rem;
+  }
 }
 
 .skills {
