--- a/sass/main.css
+++ b/sass/main.css
@@ -18,10 +18,26 @@ html {
           box-sizing: border-box;
 }
 
+@media (max-width: 600px) {
+  html {
+    font-size: 85%;
+  }
+}
+
+@media (max-width: 500px) {
+  html {
+    font-size: 75%;
+  }
+}
+
 .nav {
   background: black;
   color: white;
-  padding: 0 2rem;
+  padding: 0.8rem 2rem;
+}
+
+.nav__logo {
+  z-index: 1000;
 }
 
 .nav__lists {
@@ -36,6 +52,8 @@ html {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
 }
 
 .nav__list-items {
@@ -50,6 +68,12 @@ html {
           justify-content: flex-end;
   -ms-flex-item-align: stretch;
       align-self: stretch;
+}
+
+@media (max-width: 600px) {
+  .nav__list-items {
+    display: none;
+  }
 }
 
 .nav__list-item:not(:last-child) {
@@ -118,6 +142,129 @@ html {
   color: var(--primary-color);
 }
 
+.hamburger {
+  height: 100%;
+  border: 2px solid peru;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 1rem;
+  cursor: pointer;
+  z-index: 1000;
+}
+
+.hamburger__icon {
+  width: 3.5rem;
+  background: white;
+  height: 3px;
+  display: inline-block;
+  position: relative;
+}
+
+.hamburger__icon::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: white;
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-transform: translateY(8px);
+          transform: translateY(8px);
+  display: inline-block;
+}
+
+.hamburger__icon::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: white;
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-transform: translateY(-8px);
+          transform: translateY(-8px);
+  display: inline-block;
+}
+
+.nav__items-mobile {
+  position: absolute;
+  width: 100%;
+  height: 0;
+  -webkit-transition: all 0.8s;
+  transition: all 0.8s;
+  background: black;
+  right: 0;
+  top: 5.6rem;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.show-nav-items {
+  height: 25rem;
+  opacity: 1;
+  visibility: visible;
+}
+
+@media (max-width: 600px) {
+  .mobile-nav__list-items {
+    height: 100%;
+    display: block;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    list-style: none;
+    -webkit-transition: all 0.8s;
+    transition: all 0.8s;
+    -webkit-transform: translateY(-200rem);
+            transform: translateY(-200rem);
+  }
+  .nav__list-item {
+    margin: 1rem 1rem !important;
+    padding: 1rem !important;
+  }
+  .nav__list-item:hover {
+    background: var(--primary-color);
+    color: white !important;
+  }
+  .nav__list-item:hover::before {
+    display: none;
+  }
+  .nav__list-btn {
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+    border-radius: 0;
+    padding: 0;
+    margin: 1rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    height: 4rem;
+    width: 8rem;
+  }
+}
+
+.mobile-nav__items-show {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
 .home {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -163,6 +310,11 @@ html {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .home__business {
@@ -236,6 +388,55 @@ html {
           transform: translate(-50%, 200%) !important;
 }
 
+.home-social-icons {
+  position: absolute;
+  bottom: 0;
+}
+
+.social-icons {
+  font-size: 1.5rem;
+  margin-top: 1rem;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  width: 100%;
+  text-align: center;
+}
+
+.social-icons:hover i {
+  color: rgba(255, 255, 255, 0.301);
+}
+
+.social-icons a {
+  text-decoration: none;
+}
+
+.social-icons i {
+  color: black;
+  padding: 1rem;
+  margin: 0 0.4rem;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  display: inline-block;
+}
+
+.social-icons i:hover {
+  color: black;
+  cursor: pointer;
+  -webkit-transform: translateY(-6px) scale(1.2);
+          transform: translateY(-6px) scale(1.2);
+}
+
+.social-icons i:active {
+  -webkit-transform: translateY(0) scale(1);
+          transform: translateY(0) scale(1);
+}
+
+@media (max-width: 400px) {
+  .home__text-business {
+    margin-top: 1rem;
+  }
+}
+
 @-webkit-keyframes moveUpDown {
   0% {
     -webkit-transform: translateY(-0.2rem);
@@ -269,6 +470,12 @@ html {
 .skills-section {
   padding: 4rem;
   background: black;
+}
+
+@media (max-width: 600px) {
+  .skills-section {
+    padding: 2rem 0.9rem;
+  }
 }
 
 .skills {
@@ -365,11 +572,24 @@ html {
   background: linear-gradient(to right, var(--primary-color), var(--secondary-color));
 }
 
+@media (max-width: 600px) {
+  .projects-section {
+    padding: 2rem 0.9rem;
+  }
+}
+
 .projects {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (minmax(24rem, 1fr))[auto-fill];
       grid-template-columns: repeat(auto-fill, minmax(24rem, 1fr));
+}
+
+@media (max-width: 600px) {
+  .projects {
+    -ms-grid-columns: (minmax(19rem, 1fr))[auto-fill];
+        grid-template-columns: repeat(auto-fill, minmax(19rem, 1fr));
+  }
 }
 
 .project {
@@ -508,6 +728,7 @@ html {
 }
 
 .form-section {
+  padding: 0.9rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -558,5 +779,36 @@ html {
 
 .form__btn {
   width: 100%;
+}
+
+@media (max-width: 1000px) {
+  .form {
+    width: 80%;
+  }
+}
+
+@media (max-width: 600px) {
+  .form {
+    width: 100%;
+  }
+}
+
+.footer {
+  background: grey;
+  padding: 1rem;
+}
+
+.footer__text {
+  text-align: center;
+  font-size: 0.9rem;
+  text-transform: uppercase;
+  margin-top: 1rem;
+  font-weight: 200;
+}
+
+.footer__social-icons {
+  margin: 1rem 0;
+  padding: 1rem;
+  border-bottom: 2px solid black;
 }
 /*# sourceMappingURL=main.css.map */
