--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -88,6 +88,10 @@
   cursor: pointer;
   z-index: 1000;
 
+  @media (min-width: 600px) {
+    display: none;
+  }
+
   &__icon {
     width: 3.5rem;
     background: white;
