--- a/sass/main.css
+++ b/sass/main.css
@@ -156,6 +156,12 @@ html {
   z-index: 1000;
 }
 
+@media (min-width: 600px) {
+  .hamburger {
+    display: none;
+  }
+}
+
 .hamburger__icon {
   width: 3.5rem;
   background: white;
