fixes bug in nav bar

--- a/sass/main.css
+++ b/sass/main.css
@@ -271,6 +271,12 @@ html {
           transform: translateY(0);
 }
 
+@media (min-width: 600px) {
+  #mobile-nav {
+    display: none;
+  }
+}
+
 .home {
   display: -webkit-box;
   display: -ms-flexbox;
