--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -179,3 +179,8 @@
 .mobile-nav__items-show {
   transform: translateY(0);
 }
+@media (min-width: 600px) {
+  #mobile-nav {
+    display: none;
+  }
+}
