--- a/sass/main.css
+++ b/sass/main.css
@@ -34,6 +34,8 @@ html {
   background: black;
   color: white;
   padding: 0.8rem 2rem;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
 }
 
 .nav__logo {
@@ -275,6 +277,14 @@ html {
   #mobile-nav {
     display: none;
   }
+}
+
+.sticky-nav {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  opacity: 0.85;
+  z-index: 10000;
 }
 
 .home {
