--- a/sass/main.css
+++ b/sass/main.css
@@ -287,6 +287,11 @@ html {
   z-index: 10000;
 }
 
+.nav__list-item:last-child:hover {
+  background: none;
+  color: var(--primary-color) !important;
+}
+
 .home {
   display: -webkit-box;
   display: -ms-flexbox;
