--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -36,6 +36,15 @@
     visibility: visible;
   }
 
+  &:hover &__img {
+    filter: brightness(0.2);
+  }
+
+  &__img {
+    height: 100%;
+    width: 100%;
+  }
+
   &__btns {
     position: absolute;
     top: 50%;
@@ -133,41 +142,4 @@
     visibility: visible;
     transform: translateX(-50%);
   }
-}
-
-.project-1 {
-  background: url("../imgs/project-1.png");
-  background-position: left;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.project-2 {
-  background: url("../imgs/project-2.png");
-  background-position: left;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.project-3 {
-  background: url("../imgs/project-3.png");
-  background-position: left;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.project-4 {
-  background: url("../imgs/project-4.png");
-  background-position: left;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.project-5 {
-  background: url("../imgs/project-5.png");
-  background-position: left;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.project-6 {
-  background: url("../imgs/project-6.png");
-  background-position: left;
-  background-size: cover;
-  background-repeat: no-repeat;
 }
